Apply suggestions from code review
Co-authored-by: lewtun <lewis.c.tunstall@gmail.com>
Co-authored-by: Nathan Lambert <nathan@huggingface.co>
Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

--- a/_blog.yml
+++ b/_blog.yml
@@ -1992,7 +1992,7 @@
     - ethics
 
 - local: stackllama
-  title: "StackLlama: A hands-on guide to train LlaMa with RLHF"
+  title: "StackLlama: A hands-on guide to train LLaMa with RLHF"
   author: edbeeching
   thumbnail: /blog/assets/120_rlhf/thumbnail.png <-UPDATE!
   date: April 5, 2023
