--- a/_blog.yml
+++ b/_blog.yml
@@ -1990,3 +1990,12 @@
   date: Mar 30, 2023
   tags:
     - ethics
+
+- local: dedup
+  title: "Large-scale Near-deduplication Behind BigCode"
+  author: chenghao
+  thumbnail: /blog/assets/dedup/thumbnail.png
+  date: April 5, 2023
+  tags:
+    - bigcode
+    - deduplication
