add WIP blog stackllama (#998)
* add WIP blog stackllama

* Apply suggestions from code review

Co-authored-by: Nathan Lambert <nathan@huggingface.co>

* Update stackllama.md

* Apply suggestions from code review

Co-authored-by: lewtun <lewis.c.tunstall@gmail.com>
Co-authored-by: Nathan Lambert <nathan@huggingface.co>
Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

* Apply suggestions from code review

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

* add another llama to the blog

* add thumbnail

* add challenges

* add accelerate/torchrun commands

* add example and fix size computations

* Adding RLHF to tags (Update _blog.yml)

* fix demo

* fix younes username

* fix newline in equations

* Apply suggestions from code review

Co-authored-by: Nathan Lambert <nathan@huggingface.co>

---------

Co-authored-by: Nathan Lambert <nathan@huggingface.co>
Co-authored-by: lewtun <lewis.c.tunstall@gmail.com>
Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

--- a/_blog.yml
+++ b/_blog.yml
@@ -1991,3 +1991,13 @@
   date: Mar 30, 2023
   tags:
     - ethics
+
+- local: stackllama
+  title: "StackLlama: A hands-on guide to train LLaMa with RLHF"
+  author: edbeeching
+  thumbnail: /blog/assets/138_stackllama/thumbnail.png
+  date: April 5, 2023
+  tags:
+    - rl
+    - rlhf
+    - nlp
