--- a/_blog.yml
+++ b/_blog.yml
@@ -2001,3 +2001,14 @@
     - rl
     - rlhf
     - nlp
+
+- local: owkin-substra
+  title: "StackLLaMA: A hands-on guide to train LLaMA with RLHF"
+  author: EazyAl
+  thumbnail: /blog/assets/139_owkin-substra/thumbnail.png
+  date: April 12, 2023
+  tags:
+    - cv
+    - federated-learning
+    - fl
+    - open-source-collab
