Changes from review

--- a/_blog.yml
+++ b/_blog.yml
@@ -2002,10 +2002,10 @@
     - rlhf
     - nlp
 
-- local: owkin-substra
-  title: "StackLLaMA: A hands-on guide to train LLaMA with RLHF"
+- local: substra
+  title: "Creating Privacy Preserving AI with Substra"
   author: EazyAl
-  thumbnail: /blog/assets/139_owkin-substra/thumbnail.png
+  thumbnail: /blog/assets/139_substra/thumbnail.png
   date: April 12, 2023
   tags:
     - cv
