Add Owkin Substra collab blog post (#1011)
* Add Substra blog post and thumbnail

* Add rest of visual assets

* Small changes to image paths

* Changes from review

* Minor changes to URL name and wording

* Typo

--- a/_blog.yml
+++ b/_blog.yml
@@ -2001,3 +2001,14 @@
     - rl
     - rlhf
     - nlp
+
+- local: owkin-substra
+  title: "Creating Privacy Preserving AI with Substra"
+  author: EazyAl
+  thumbnail: /blog/assets/139_owkin-substra/thumbnail.png
+  date: April 12, 2023
+  tags:
+    - cv
+    - federated-learning
+    - fl
+    - open-source-collab
