Graph classification tutorial post (#781)
* rebase

* Apply suggestions from code review

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

* Update for clarity

* change to path of data file

* Apply suggestions from code review

Co-authored-by: Sayak Paul <spsayakpaul@gmail.com>

* Updated text after review by Sayak

* Added ogb link

* Edited mention of cluster

* correct transformers version

* added blog

* Notebook graphml classification

* update date

---------

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>
Co-authored-by: Sayak Paul <spsayakpaul@gmail.com>

--- a/_blog.yml
+++ b/_blog.yml
@@ -2012,3 +2012,13 @@
     - federated-learning
     - fl
     - open-source-collab
+
+- local: graphml-classification
+  title: "Graph Classification with Transformers"
+  author: clefourrier
+  thumbnail: /blog/assets/125_intro-to-graphml/thumbnail_classification.png
+  date: April 14, 2023
+  tags:
+    - community
+    - guide
+    - graphs
