--- a/_events.yml
+++ b/_events.yml
@@ -5,7 +5,7 @@
 - name: "Free Workshop: Save money with Inferentia2"
   link: https://aws-startup-lofts.com/amer/loft/san-francisco/e/c1621/ml-startup-workshop-deploying-text-summarization-and-image-generation-applications-with-hugging-face-and-aws-inferentia2
   date: May 11, 2023
-  description: [San Francisco] Learn how to save money deploying text and image Generative AI models on AWS Inferentia2!
+  description: "[San Francisco] Learn how to save money deploying text and image Generative AI models on AWS Inferentia2!"
 
 - name: Meet-up on Generative AI
   link: https://sites.google.com/huggingface.co/generative-ai-meetup
