--- a/_events.yml
+++ b/_events.yml
@@ -1,6 +1,7 @@
 # "date" attribute should be end date of an event in `Mon DD, YYYY` format (e.g. Feb 3, 2014)
 # "date_formatted" attribute is optional if you want to control the format/look of "date" on hf.co
 #                                             (e.g. specifying event date range like Jan 24 to Feb 7, 2022)
+# pro tip: put strings e.g. name or description in "quotes" or do not include special characters incl. ':' '[' 
 
 - name: "Free Workshop: Save money with Inferentia2"
   link: https://aws-startup-lofts.com/amer/loft/san-francisco/e/c1621/ml-startup-workshop-deploying-text-summarization-and-image-generation-applications-with-hugging-face-and-aws-inferentia2
