--- a/zh/_blog.yml
+++ b/zh/_blog.yml
@@ -118,7 +118,7 @@
     - open-source-collab
 
 - local: intel-sapphire-rapids
-  title: "Accelerating PyTorch Transformers with Intel Sapphire Rapids, part 1"
+  title: "使用英特尔 Sapphire Rapids 加速 PyTorch Transformers 模型（第一部分）"
   author: juliensimon
   thumbnail: /blog/assets/124_intel_sapphire_rapids/02.png
   date: January 2, 2023
@@ -140,7 +140,7 @@
     - game-dev
 
 - local: intro-graphml
-  title: "Introduction to Graph Machine Learning"
+  title: "一文带你入门图机器学习"
   author: clefourrier
   thumbnail: /blog/assets/125_intro-to-graphml/thumbnail.png
   date: January 3, 2023
@@ -160,7 +160,7 @@
     - game-dev
 
 - local: image-similarity
-  title: "Image Similarity with Hugging Face Datasets and Transformers"
+  title: "基于 Hugging Face Datasets 和 Transformers 的图像相似性搜索"
   author: sayakpaul
   thumbnail: /blog/assets/image_similarity/thumbnail.png
   date: Jan 16, 2023
@@ -373,6 +373,16 @@
   date: March 28, 2023
   tags:
     - diffusers
+
+- local: graphml-classification
+  title: "使用 Transformers 进行图分类"
+  author: clefourrier
+  thumbnail: /blog/assets/125_intro-to-graphml/thumbnail_classification.png
+  date: April 14, 2023
+  tags:
+    - community
+    - guide
+    - graphs
 
 - local: ethics-soc-3
   title: "道德与社会问题简报 #3: Hugging Face 上的道德开放性"
