Add: ZH translation for ethics-soc-3.md (#1027)
* update soc3-zn

* Update _blog.yml

Try to resolve conflicts

* Update: proofreading zh/ethics-soc-3.md

---------

Co-authored-by: innovation64 <liyang19991126@126.com>

--- a/zh/_blog.yml
+++ b/zh/_blog.yml
@@ -383,3 +383,11 @@
     - community
     - guide
     - graphs
+
+- local: ethics-soc-3
+  title: "道德与社会问题简报 #3: Hugging Face 上的道德开放性"
+  author: irenesolaiman
+  thumbnail: /blog/assets/137_ethics_soc_3/ethics_3_thumbnail.png
+  date: Mar 30, 2023
+  tags:
+    - ethics
