--- a/_blog.yml
+++ b/_blog.yml
@@ -2033,3 +2033,13 @@
     - aws
     - nlp
     - cv
+
+- local: unity-in-spaces
+  title: "How to host a Unity game in a Space"
+  author: dylanebert
+  thumbnail: /blog/assets/124_ml-for-games/unity-in-spaces-thumbnail.png
+  date: April 21, 2023
+  tags:
+    - community
+    - guide
+    - game-dev
