--- a/_blog.yml
+++ b/_blog.yml
@@ -2036,7 +2036,7 @@
 
 - local: tf_tpu
   title: "Training a language model with 🤗 Transformers using TensorFlow and TPUs"
-  author: philschmid
+  author: rocketknight1
   thumbnail: /blog/assets/tf_tpu_training/thumbnail.png
   date: April 25, 2023
   tags:
