--- a/zh/_blog.yml
+++ b/zh/_blog.yml
@@ -400,3 +400,14 @@
   tags:
     - guide
     - nlp
+
+
+- local: hf-bitsandbytes-integration
+  title: "大规模 Transformer 模型 8 比特矩阵乘简介 - 基于 Hugging Face Transformers、Accelerate 以及 bitsandbytes"
+  author: ybelkada
+  thumbnail: /blog/assets/96_hf_bitsandbytes_integration/Thumbnail_blue.png
+  date: August 17, 2022
+  tags:
+    - nlp
+    - llm
+    - quantization
