--- a/_blog.yml
+++ b/_blog.yml
@@ -2044,7 +2044,7 @@
     - guide
     - game-dev
 
-- local: chinese-blog
+- local: chinese-language-blog
   title: "Introducing HuggingFace blog for Chinese speakers: Fostering Collaboration with the Chinese AI community"
   author: xianbao
   thumbnail: /blog/assets/140_accelerate_transformers_with_inferentia2/thumbnail.png
