--- a/_blog.yml
+++ b/_blog.yml
@@ -2043,3 +2043,12 @@
     - community
     - guide
     - game-dev
+
+- local: chinese-language-blog
+  title: "Introducing HuggingFace blog for Chinese speakers: Fostering Collaboration with the Chinese AI community"
+  author: xianbao
+  thumbnail: /blog/assets/chinese-language-blog/thumbnail.png
+  date: April 24, 2023
+  tags:
+    - partnerships
+    - community
