--- a/zh/_blog.yml
+++ b/zh/_blog.yml
@@ -410,3 +410,12 @@
     - nlp
     - llm
     - quantization
+
+- local: chinese-language-blog
+  title: "Hugging Face 中文博客正式发布！"
+  author: xianbao
+  thumbnail: /blog/assets/chinese-language-blog/thumbnail.png
+  date: April 24, 2023
+  tags:
+    - partnerships
+    - community
