--- a/_blog.yml
+++ b/_blog.yml
@@ -2063,3 +2063,12 @@
     - guide
     - tensorflow
     - tpu
+    
+- local: if
+  title: "Running IF with 🧨 diffusers on a Free Tier Google Colab"
+  author: williamberman
+  thumbnail: /blog/assets/chinese-language-blog/thumbnail.png
+  date: April 26, 2023
+  tags:
+    - guide
+    - diffusion
