--- a/zh/_blog.yml
+++ b/zh/_blog.yml
@@ -323,6 +323,19 @@
     - cv
     - multimodal
 
+- local: red-teaming
+  title: "Red-Teaming Large Language Models"
+  author: nazneen
+  thumbnail: /blog/assets/red-teaming/thumbnail.png
+  date: February 22, 2023
+  tags:
+    - llms
+    - rlhf
+    - red-teaming
+    - chatgpt
+    - safety
+    - alignment
+
 - local: controlnet
   title: "使用 🧨 Diffusers 实现 ControlNet 高速推理"
   author: sayakpaul
