Blog post on TF TPU training (#1035)
* add tf tpu training blog draft

Co-authored-by: Matt <rocketknight1@gmail.com>

* add entry to _blog.yml

* optimize thumbnail.

* change author.

* change thumbnail.

* explicit line breaks.

* Apply suggestions from code review

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

* address rest of the comments.

* Change wording to be marginally more acceptable in polite company

* change publication date.

---------

Co-authored-by: Matt <rocketknight1@gmail.com>
Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

--- a/_blog.yml
+++ b/_blog.yml
@@ -2052,3 +2052,14 @@
   tags:
     - partnerships
     - community
+
+- local: tf_tpu
+  title: "Training a language model with 🤗 Transformers using TensorFlow and TPUs"
+  author: rocketknight1
+  thumbnail: /blog/assets/tf_tpu_training/thumbnail.png
+  date: April 27, 2023
+  tags:
+    - nlp
+    - guide
+    - tensorflow
+    - tpu
