--- a/_blog.yml
+++ b/_blog.yml
@@ -2072,3 +2072,13 @@
   tags:
     - guide
     - diffusion
+
+- local: unity-api
+  title: "How to Install and Use the Hugging Face Unity API"
+  author: dylanebert
+  thumbnail: /blog/assets/124_ml-for-games/unity-api-thumbnail.png
+  date: May 1, 2023
+  tags:
+    - community
+    - guide
+    - game-dev
