--- a/_blog.yml
+++ b/_blog.yml
@@ -2063,7 +2063,7 @@
     - guide
     - tensorflow
     - tpu
-    
+
 - local: if
   title: "Running IF with 🧨 diffusers on a Free Tier Google Colab"
   author: williamberman
@@ -2072,3 +2072,12 @@
   tags:
     - guide
     - diffusion
+
+- local: assisted-generation
+  title: "Assisted Generation: a new direction toward low-latency text generation"
+  author: joaogante
+  thumbnail: /blog/assets/assisted-generation/thumbnail.png  # TODO
+  date: May 8, 2023  # exact date TBD
+  tags:
+    - nlp
+    - research
