--- a/_blog.yml
+++ b/_blog.yml
@@ -2121,3 +2121,16 @@
     - nlp
     - community
     - research 
+
+- local: chatbot-amd-gpu
+  title: "Run a Chatgpt-like Chatbot on a Single AMD GPU with ROCm"
+  thumbnail: /blog/assets/chatbot-amd-gpu/thumbnail.png
+  author: andyll7772
+  date: May 15, 2023
+  tags:
+    - guide
+    - llm
+    - nlp
+    - amd
+    - inference
+    - rocm
