--- a/_blog.yml
+++ b/_blog.yml
@@ -2092,3 +2092,13 @@
     - nlp
     - community
     - research 
+  
+- local: rwkv
+  title: "Introducing RWKV - An RNN with the advantages of a transformer"
+  author: BlinkDL
+  thumbnail: /blog/assets/142_rwkv/rwkv_thumbnail.png
+  date: May 10, 2023
+  tags:
+    - nlp
+    - community
+    - research 
