--- a/_blog.yml
+++ b/_blog.yml
@@ -2094,7 +2094,7 @@
     - research 
   
 - local: rwkv
-  title: "Introducing RWKV - An RNN with the advantages of a transformer"
+  title: "Introducing RWKV — An RNN with the advantages of a transformer"
   author: BlinkDL
   thumbnail: /blog/assets/142_rwkv/rwkv_thumbnail.png
   date: May 10, 2023
