resolve merge conflicts

--- a/_blog.yml
+++ b/_blog.yml
@@ -1684,19 +1684,6 @@
     - guide
     - game-dev
 
-- local: red-teaming
-  title: "Red-Teaming Large Language Models"
-  author: nazneen
-  thumbnail: /blog/assets/red-teaming/thumbnail.png
-  date: February 22, 2023
-  tags:
-    - llms
-    - rlhf
-    - red-teaming
-    - chatgpt
-    - safety
-    - alignment
-
 - local: optimum-onnxruntime-training
   title: "Optimum+ONNX Runtime - Easier, Faster training for your Hugging Face models"
   author: Jingya
@@ -2054,7 +2041,7 @@
     - community
 
 - local: tf_tpu
-  title: "Training a language model with 🤗 Transformers using TensorFlow and TPUs"
+  title: "Training a language model with 🤗 Transformers using TensorFlow and TPUs"
   author: rocketknight1
   thumbnail: /blog/assets/tf_tpu_training/thumbnail.png
   date: April 27, 2023
@@ -2063,15 +2050,32 @@
     - guide
     - tensorflow
     - tpu
-
-- local: text-to-video
-  title: "A Dive into Text-to-Video Models"
-  author: adirik
-  thumbnail: /blog/assets/140_text-to-video/thumbnail.png
-  date: May 8, 2023
+    
+- local: if
+  title: "Running IF with 🧨 diffusers on a Free Tier Google Colab"
+  author: williamberman
+  thumbnail: /blog/assets/if/thumbnail.jpg
+  date: April 26, 2023
   tags:
-    - multi-modal
     - guide
     - diffusion
-    - text-to-image
-    - text-to-video
+
+- local: unity-api
+  title: "How to Install and Use the Hugging Face Unity API"
+  author: dylanebert
+  thumbnail: /blog/assets/124_ml-for-games/unity-api-thumbnail.png
+  date: May 1, 2023
+  tags:
+    - community
+    - guide
+    - game-dev
+
+- local: starcoder
+  title: "StarCoder: A State-of-the-Art LLM for Code"
+  author: lvwerra
+  thumbnail: /blog/assets/141_starcoder/starcoder_thumbnail.png
+  date: May 4, 2023
+  tags:
+    - nlp
+    - community
+    - research 
