resolve merge conflicts

--- a/_blog.yml
+++ b/_blog.yml
@@ -2079,3 +2079,16 @@
     - nlp
     - community
     - research 
+
+- local: text-to-video
+  title: "A Dive into Text-to-Video Models"
+  author: adirik
+  thumbnail: /blog/assets/140_text-to-video/thumbnail.png
+  date: May 8, 2023
+  tags:
+    - multi-modal
+    - cv
+    - guide
+    - diffusion
+    - text-to-image
+    - text-to-video
