--- a/_blog.yml
+++ b/_blog.yml
@@ -2092,3 +2092,13 @@
     - diffusion
     - text-to-image
     - text-to-video
+
+- local: starchat-alpha
+  title: "Creating a Coding Assistant with StarCoder"
+  author: lewtun
+  thumbnail: /blog/assets/starchat_alpha/thumbnail.png
+  date: May 9, 2023
+  tags:
+    - nlp
+    - community
+    - research
