--- a/_blog.yml
+++ b/_blog.yml
@@ -2103,7 +2103,7 @@
     - community
     - research
 
-- local: content-guidelines
+- local: content-guidelines-update
   title: "Announcing our new Content Guidelines and Policy"
   author: giadap
   date: May 11, 2023
