--- a/_blog.yml
+++ b/_blog.yml
@@ -2050,7 +2050,7 @@
     - guide
     - tensorflow
     - tpu
-    
+
 - local: if
   title: "Running IF with 🧨 diffusers on a Free Tier Google Colab"
   author: williamberman
@@ -2101,4 +2101,13 @@
   tags:
     - nlp
     - community
+    - research
+    
+- local: assisted-generation
+  title: "Assisted Generation: a new direction toward low-latency text generation"
+  author: joaogante
+  thumbnail: /blog/assets/assisted-generation/thumbnail.png
+  date: May 11, 2023
+  tags:
+    - nlp
     - research
